DRD-105: Preload font to avoid layout shift

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/logoiv.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <title>Druid - Team 4</title>
 </head>
 
